name:           RNAdraw
version:        0.3.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       https://github.com/choener/RNAdraw
copyright:      Christian Hoener zu Siederdissen, 2011-2015
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       Draw RNA secondary structures
description:
                We provide a number of ways to draw RNA secondary structures.
                In particular, the following types of structures can be (more
                or less elegantly) drawn:
                .
                * Dot plots for mfe and partition function
                .
                * canonical RNA secondary structures without pseudoknots
                .
                * non-canonical extended RNA secondary structures
                .
                * pseudoknotted secondary structures
                .
                From top to bottom, the beauty of presentation degrades. Some
                emphasis is put on ASCII-drawings, especially Vienna
                dot-bracket-like notation.

extra-source-files:
  changelog.md
  README.md

library
  build-depends: base             >= 4.7      && <4.9
               , array
               , BiobaseXNA       >= 0.9.1.1  && < 0.9.2
               , bytestring
               , containers
               , PrimitiveArray   >= 0.6.0    && < 0.6.1
               , QuasiText        >= 0.1.2.5  && < 0.1.3
               , repa             >= 3.3      && < 3.5
               , split            >= 0.2      && < 0.3
               , text             >= 1.2      && < 1.3
               , vector           == 0.10.*

  exposed-modules:
    BioInf.Secondary.Draw.DotBracket
    BioInf.ViennaRNA.DotPlot
    BioInf.ViennaRNA.DotPlot.Export
    BioInf.ViennaRNA.DotPlot.Import

  ghc-options:
    -O2

executable RNAdotplot
  build-depends:
    cmdargs >= 0.10
  main-is:
    RNAdotplot.hs
  ghc-options:
    -O2

